--- a/.github/workflows/main_flow.yml
+++ b/.github/workflows/main_flow.yml
@@ -42,6 +42,7 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: test
+          args: --lib
 
   lints:
     name: Lints
