--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,8 @@ tokio-core = "0.1.17"
 futures = "0.3.5"
 tokio = { version = "0.2", features = ["full"] }
 reqwest = { version = "0.10.8", features = ["json"] }
-log = "0.4.8"
+log = "0.4.11"
+env_logger = "0.7.1"
 strum = "0.18.0"
 strum_macros = "0.18.0"
 
