--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,9 @@ log = "0.4.11"
 env_logger = "0.7.1"
 strum = "0.18.0"
 strum_macros = "0.18.0"
+chrono = "0.4"
 
 [dev-dependencies]
+fake = "2"
 mockito = "0.27.0"
 serial_test = "0.5.0"
