--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,11 @@ strum_macros = "0.18.0"
 chrono = "0.4"
 
 [dev-dependencies]
+cucumber = { package = "cucumber_rust", version = "^0.7.0" }
 fake = "2"
 mockito = "0.27.0"
 serial_test = "0.5.0"
+
+[[test]]
+name = "cucumber"
+harness = false
