--- a/.github/workflows/main_flow.yml
+++ b/.github/workflows/main_flow.yml
@@ -1,48 +1,10 @@
 # Based on https://github.com/actions-rs/meta/blob/master/recipes/quickstart.md
 
-on: [push, pull_request]
+on: [ push, pull_request ]
 
 name: Main flow
 
 jobs:
-  check:
-    name: Check
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout sources
-        uses: actions/checkout@v2
-
-      - name: Install stable toolchain
-        uses: actions-rs/toolchain@v1
-        with:
-          profile: minimal
-          toolchain: stable
-          override: true
-
-      - name: Run cargo check
-        uses: actions-rs/cargo@v1
-        with:
-          command: check
-
-  test:
-    name: Test Suite
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout sources
-        uses: actions/checkout@v2
-
-      - name: Install stable toolchain
-        uses: actions-rs/toolchain@v1
-        with:
-          profile: minimal
-          toolchain: stable
-          override: true
-
-      - name: Run cargo test
-        uses: actions-rs/cargo@v1
-        with:
-          command: test
-          args: --lib
 
   lints:
     name: Lints
@@ -70,3 +32,33 @@ jobs:
         with:
           command: clippy
           args: -- -D warnings
+
+
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: Run cargo check
+        uses: actions-rs/cargo@v1
+        with:
+          command: check
+      - name: Write database url token information for test.env
+        run: echo "DATABASE_URL=postgres://postgres:${{ secrets.TEST_DATABASE_URL }}@127.0.0.1:15432/expenses-it" >> test.env
+      - name: Write database database password information for test.env
+        run: echo "POSTGRES_PASSWORD=${{ secrets.TEST_DATABASE_URL }}" >> test.env
+      - name: Write telegram bot token information for test.env
+        run: echo "TELEGRAM_BOT_TOKEN=${{ secrets.TEST_TELEGRAM_BOT_TOKEN }}" >> test.env
+      - name: Build the docker-compose stack
+        run: docker-compose -p it  --env-file ./test.env up -d
+      - name: Check running containers
+        run: docker ps -a
+      - name: Build
+        run: cargo build --verbose
+      - name: Run unit tests
+        run: cargo test --lib --verbose
+      - name: Run cargo test
+        uses: actions-rs/cargo@v1
+        with:
+          command: test
+          args: --test integration_tests -- --test-threads 1
