Improving ci flow.

--- a/.github/workflows/main_flow.yml
+++ b/.github/workflows/main_flow.yml
@@ -1,10 +1,42 @@
 # Based on https://github.com/actions-rs/meta/blob/master/recipes/quickstart.md
 
-on: [push, pull_request]
+on: [ push, pull_request ]
 
 name: Main flow
 
 jobs:
+
+  create-test-envfile:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Make envfile
+        uses: SpicyPizza/create-envfile@v1
+        with:
+          DATABASE_URL: ${{ secrets.TEST_DATABASE_URL }}
+          TELEGRAM_BOT_TOKEN: ${{ secrets.TEST_TELEGRAM_BOT_TOKEN }}
+          directory: <directory_name>
+          file_name: test.env
+
+  create-envfile:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Make envfile
+        uses: SpicyPizza/create-envfile@v1
+        with:
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+          TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+          directory: <directory_name>
+          file_name: .env
+
+  build:
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v2
+      - name: Build
+        run: cargo build --verbose
+      - name: Run tests
+        run: cargo test --verbose
+
   check:
     name: Check
     runs-on: ubuntu-latest
