--- a/.github/workflows/main_flow.yml
+++ b/.github/workflows/main_flow.yml
@@ -56,7 +56,7 @@ jobs:
         with:
           command: check
 
-  test:
+  unit-tests:
     name: Test Suite
     runs-on: ubuntu-latest
     steps:
@@ -75,6 +75,27 @@ jobs:
         with:
           command: test
           args: --lib
+
+  integration-tests:
+    name: Test Suite
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout sources
+        uses: actions/checkout@v2
+
+      - name: Install stable toolchain
+        uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: stable
+          override: true
+
+      - name: Run cargo test
+        uses: actions-rs/cargo@v1
+        with:
+          command: test
+          args: --test integration_tests
+
 
   lints:
     name: Lints
