--- a/.github/workflows/main_flow.yml
+++ b/.github/workflows/main_flow.yml
@@ -51,14 +51,14 @@ jobs:
           USER_ID: 54981987
           DATABASE_URL: ${{ secrets.TEST_DATABASE_URL }}
           TELEGRAM_BOT_TOKEN: ${{ secrets.TEST_TELEGRAM_BOT_TOKEN }}
-          directory: <directory_name>
+          directory: /expenses
           file_name: test.env
       - name: Create .env file
         uses: SpicyPizza/create-envfile@v1
         with:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
           TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-          directory: <directory_name>
+          directory: /expenses
           file_name: .env
       - name: Run unit tests
         run: cargo test --lib --verbose
