--- a/.github/workflows/main_flow.yml
+++ b/.github/workflows/main_flow.yml
@@ -48,15 +48,15 @@ jobs:
       - name: Create test.env file
         uses: SpicyPizza/create-envfile@v1
         with:
-          USER_ID: 54981987
-          DATABASE_URL: ${{ secrets.TEST_DATABASE_URL }}
-          TELEGRAM_BOT_TOKEN: ${{ secrets.TEST_TELEGRAM_BOT_TOKEN }}
+          envkey_USER_ID: 54981987
+          envkey_DATABASE_URL: ${{ secrets.TEST_DATABASE_URL }}
+          envkey_TELEGRAM_BOT_TOKEN: ${{ secrets.TEST_TELEGRAM_BOT_TOKEN }}
           file_name: test.env
       - name: Create .env file
         uses: SpicyPizza/create-envfile@v1
         with:
-          DATABASE_URL: ${{ secrets.DATABASE_URL }}
-          TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+          envkey_DATABASE_URL: ${{ secrets.DATABASE_URL }}
+          envkey_TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
           directory: /expenses
           file_name: .env
       - name: Run unit tests
