--- a/.github/workflows/main_flow.yml
+++ b/.github/workflows/main_flow.yml
@@ -44,7 +44,7 @@ jobs:
         with:
           command: check
       - name: Build the docker-compose stack
-        run: docker-compose -f docker-compose/integration-tests-setup.yml -p it up -d postgres
+        run: docker-compose -f ./docker-compose/docker-compose.yml -p it  --env-file ./docker-compose/.env.test up
       - name: Check running containers
         run: docker ps -a
       - name: Build
