--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   postgres:
     container_name: postgres
     command: "-d"
-    env_file: .env
+    env_file: .env.prod
     user: "root"
     image: postgres
     ports:
