--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,7 @@ version: '3.3'
 services:
   postgres:
     container_name: postgres
-    command: "-d"
-    env_file: .env
+    env_file: docker-compose/.env
     user: "root"
     image: postgres
     ports:
