Missing env file was fixed

--- a/docker-compose/.env.test
+++ b/docker-compose/.env.test
@@ -1,4 +1,4 @@
 POSTGRES_DB=expenses
-POSTGRES_USER=expenses-it
+POSTGRES_USER=postgres
 POSTGRES_PASSWORD=123
-POSTGRES_PORTS=127.0.0.1:5432:5432
+POSTGRES_PORTS=127.0.0.1:15432:5432
